Adminer 4.14.0:
PostgreSQL: Fix initial value of exported autoincrement
PostgreSQL: Fix renaming a database

Adminer 4.12.0:
Fix SQL query code direction if RTL language is used
MariaDB: Add support for UUID data type
MS SQL, MongoDB: Connect to localhost with default port if server is not specified
MongoDB: Fix parsing WHERE condition from SQL query

Adminer 4.11.0:
MySQL: Fix highlighting current table in menu on macOS
MariaDB: Fix several links to documentation pages
MS SQL: Prefix Unicode strings with 'N' so they are treated correctly

Adminer 4.10.0:
Print username next to the logout button
Do not display empty action links in main menu

Adminer 4.9.4:
Unify displaying of 'New item' action based on privileges
Firefox: Fix opening a database to the new browser's tab with Ctrl+click
Editor: Fix array conversion to string (issue adminerneo#3).
Editor: Fix building links with array parameters

Adminer 4.9.3:
MySQL, PostgreSQL: Fix queries splitting and string constants
MySQL: Fix where clause for JSON column
MySQL: Do not include unchanged PARTITION BY definition into ALTER TABLE query
MariaDB: Support current_timestamp()
PostgreSQL: Fix editing record that contains a field with GENERATED ALWAYS default value

Adminer 4.9.2:
PostgreSQL: Fix search fields configuration (regression from 4.9.0)
PostgreSQL: Fix exporting CREATE TABLE query with GENERATED default values
PostgreSQL: Fix exporting CREATE TABLE with sequence default value
PostgreSQL: Fix search condition for network address types, add macaddr8 type

Adminer 4.9.1:
Support PHP 8.3
PostgreSQL: Show only accessible databases

Adminer 4.9.0:
Validate connection to server in HTTP based drivers
Elasticsearch 5: Make unusable driver usable again, move it to plugins
Add new Elasticsearch 7 driver
MySQL: Skip dump of generated columns

Adminer 4.8.2:
Support multi-line table comments
MySQL: Use ST_SRID() instead of SRID() for MySQL 8 (PR #418)
PostgreSQL: Don't reset table comments (regression from 4.2.0)