@@ -1,4 +1,5 @@
 Adminer 4.14.0:
+Use autofocus HTML attribute
 PostgreSQL: Fix initial value of exported autoincrement
 PostgreSQL: Fix renaming a database
 
